syntax = "proto3";

option java_multiple_files = true;
package rs.ac.uns.ftn.grpc;
//package example;
import "model.proto";

service SpringRecipeMakingService{
  rpc makeRecipe (RequestForRecipeMaking) returns (ResponseForRecipeMaking);
}